app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buysellguess-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buysellguess
  template:
    metadata:
      labels:
        app: buysellguess
    spec:
      containers:
        - name: buysellguessapp-in-k3d-hi
          image: k3d-registry.localhost:5000/pwdelbloomboard/ps-container
          imagePullPolicy: "Always"
