app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buysellguess-svc
spec:
  type: ClusterIP
  selector:
    app: buysellguess
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
