app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
  name: buysellguess-dep-ingress
spec:
  rules:
  - host: buysellguess.local.bloomboard.com
    http:
      paths:
      - path: /
        backend:
          serviceName: buysellguess-svc
          servicePort: 3000
